# event-python-psw10

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
healing/: settings.py  urls.py
medico/: admin.py  models.py  urls.py  views.py
medico/migrations/: 0001_initial.py  0002_dadosmedico.py  0003_datasabertas.py
medico/templates/: abrir_horario.html  cadastro_medico.html  consulta_area_medico.html  consultas_medico.html  dashboard.html
paciente/: admin.py  models.py  urls.py  views.py
paciente/migrations/: 0001_initial.py  0002_documento.py
paciente/templates/: consulta.html  escolher_horario.html  home.html  minhas_consultas.html
templates/: base.html
templates/partials/: navbar.html
templates/static/geral/css/: base.css
templates/static/medicos/css/: abrir_horario.css  cadastro_medico.css
templates/static/pacientes/css/: home.css
templates/static/usuarios/css/: usuarios.css
tests/: test_psw10.py
usuarios/: views.py
usuarios/templates/: cadastro.html  login.html
