[tool.poetry]
name = "psw10"
version = "0.1.0"
description = ""
authors = ["fabiocasadossites <contato@casadossites.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
